Alter CSS and add anchor hyperlink to data sets

--- a/css/proposal.css
+++ b/css/proposal.css
@@ -1,8 +1,9 @@
 h1 {
-    font-family: 'Times New Roman', sans-serif;
+    font-family: Roboto, sans-serif;
     background-color: lightgreen;
 }
 
 p {
+    font-family: Roboto, sans-serif;
     line-height: 1.5;
 }
