--- a/css/proposal.css
+++ b/css/proposal.css
@@ -3,6 +3,10 @@ h1 {
     background-color: lightgreen;
 }
 
+h2 {
+    font-family: Roboto, sans-serif;
+}
+
 p {
     font-family: Roboto, sans-serif;
     line-height: 1.5;
