--- a/css/style.css
+++ b/css/style.css
@@ -2,12 +2,13 @@
     box-sizing: border-box;
 }
 
-body {
+/* body {
     font-family: 'Nunito Sans', Arial, sans-serif;
     font-size: 16px;
     background-image: url('../img/bg-home.jpg');
     background-size: cover;
-}
+    color: white;
+} */
 
 h1, h2, h3 {
     font-family: 'Raleway', Helvetica, sans-serif;
@@ -36,12 +37,7 @@ nav {
     width: 100%;
     color: white;
     background-color: #787C53;
-}
-
-.container {
-    max-width: 960px;
-    margin-right: auto;
-    padding-left: 1rem;
+    padding-bottom: 0.6rem;
 }
 
 ul, p {
@@ -66,6 +62,7 @@ footer a {
 nav a {
     color: white;
     text-decoration: none;
+    font-size: 1.5rem;
 }
 
 nav a:hover {
@@ -74,11 +71,16 @@ nav a:hover {
     transition: .25s ease-in-out;
 }
 
-header {
+.body-container {
     color: white;
     padding-top: 6rem;
     padding-bottom: 28rem;
-    padding-left: 4rem;
+    padding-left: 6rem;
+    font-family: 'Nunito Sans', Arial, sans-serif;
+    font-size: 16px;
+    background-image: url('../img/bg-home.jpg');
+    background-size: cover;
+    color: white;
 }
 
 dt {
@@ -88,6 +90,7 @@ dt {
 }
 
 button {
+    margin: .25rem;
     float: right;
 }
 
