--- a/css/style.css
+++ b/css/style.css
@@ -2,16 +2,8 @@
     box-sizing: border-box;
 }
 
-/* body {
-    font-family: 'Nunito Sans', Arial, sans-serif;
-    font-size: 16px;
-    background-image: url('../img/bg-home.jpg');
-    background-size: cover;
-    color: white;
-} */
-
 h1, h2, h3 {
-    font-family: 'Raleway', Helvetica, sans-serif;
+    font-family: 'Open Sans', Helvetica, sans-serif;
     font-weight: 300;
     margin-top: 0;
     margin-bottom: .5rem;
@@ -37,7 +29,6 @@ nav {
     width: 100%;
     color: white;
     background-color: #787C53;
-    padding-bottom: 0.6rem;
 }
 
 ul, p {
@@ -62,7 +53,7 @@ footer a {
 nav a {
     color: white;
     text-decoration: none;
-    font-size: 1.5rem;
+    /* font-size: 1.5rem; */
 }
 
 nav a:hover {
@@ -71,16 +62,36 @@ nav a:hover {
     transition: .25s ease-in-out;
 }
 
-.body-container {
-    color: white;
-    padding-top: 6rem;
-    padding-bottom: 28rem;
-    padding-left: 6rem;
+body {
     font-family: 'Nunito Sans', Arial, sans-serif;
     font-size: 16px;
-    background-image: url('../img/bg-home.jpg');
-    background-size: cover;
+    height: 100vh;
+}
+
+.container-fluid {
     color: white;
+    padding-top: 62px;
+}
+
+#backdrop-container {
+    background-image: url('../img/bg-home.jpg');
+    background-size: cover; 
+}
+
+#text-container {
+    background-color: #A0A66F;
+    text-align: center;
+    padding-top: 10rem;
+}
+
+#text-container h2 {
+    margin-top: 2rem;
+    font-weight:lighter;
+}
+
+#text-container :first-child {
+    padding-bottom: 3rem;
+    font-weight:bolder;
 }
 
 dt {
@@ -98,5 +109,8 @@ button {
     padding-top: 6rem;
 }
 
+html {
+    height: 100%;
+}
 
   
