--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 }
 
 h1, h2, h3 {
-    font-family: 'Open Sans', Helvetica, sans-serif;
+    font-family: 'Raleway', Helvetica, sans-serif;
     font-weight: 300;
     margin-top: 0;
     margin-bottom: .5rem;
@@ -29,6 +29,7 @@ nav {
     width: 100%;
     color: white;
     background-color: #787C53;
+    max-width: 100%;
 }
 
 ul, p {
@@ -38,11 +39,17 @@ ul, p {
 
 nav ul {
     margin: 1rem;
+    display: flex;
+}
+
+.button-right {
+    margin-left: auto;
 }
 
 nav li {
     display: inline;
     margin: 0 1rem;
+    padding-top: .5rem;
 }
 
 footer a {
@@ -53,7 +60,6 @@ footer a {
 nav a {
     color: white;
     text-decoration: none;
-    /* font-size: 1.5rem; */
 }
 
 nav a:hover {
@@ -101,8 +107,7 @@ dt {
 }
 
 button {
-    margin: .25rem;
-    float: right;
+    margin-right: .25rem;
 }
 
 #about {
