--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 }
 
 h1, h2, h3 {
-    font-family: 'Raleway', Helvetica, sans-serif;
+    font-family: 'Nunito Sans', Helvetica, sans-serif;
     font-weight: 300;
     margin-top: 0;
     margin-bottom: .5rem;
@@ -49,7 +49,7 @@ footer a {
 }
 
 body {
-    font-family: 'Nunito Sans', Arial, sans-serif;
+    font-family: 'Nunito Sans', Helvetica, sans-serif;
     font-size: 16px;
     height: 100vh;
 }
@@ -90,7 +90,7 @@ button {
 }
 
 #about {
-    padding-top: 6rem;
+    padding-top: 2rem;
 }
 
 html {
