--- a/css/quiz.css
+++ b/css/quiz.css
@@ -2,38 +2,25 @@
   box-sizing: border-box;
 }
 
-body {
+html {
+  height: 100%;
+}
+
+.quiz-body {
     font-family: 'Nunito Sans', Arial, sans-serif;
     background-color: #A0A66F;
 }
 
-.container {
+.body-container {
     max-width: 960px;
     margin-right: auto;
     padding-left: 1rem;
 }
 
-ul, p {
-    margin-top: 0;
-    margin-bottom: 1rem;
-}
-
 nav {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    color: white;
     background-color: #787C53;
-}
-
-nav ul {
-    margin: 1rem;
-}
-
-nav li {
-    display: inline;
-    margin: 0 1rem;
+    padding: 0.5rem;
+    width: 100%;
 }
 
 nav a {
@@ -47,11 +34,15 @@ nav a:hover {
     transition: .25s ease-in-out;
 }
 
-button {
-  float: right;
+.button-right {
+    margin-left: auto;
 }
 
-.container {
+button {
+    margin-right: .25rem;
+}
+
+.quiz-container {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -59,7 +50,7 @@ button {
   color: white;
 }
 
-.quiz_button {
+.quiz-button {
   background-color: white; /* Green */
   border: none;
   color: black;
@@ -69,7 +60,7 @@ button {
   font-weight: bold;
 }
 
-.quiz_contain {
+.quiz-contain {
   position: absolute;
   top: 60%;
   left: 50%;
