--- a/css/quiz.css
+++ b/css/quiz.css
@@ -1,23 +1,23 @@
-* {
+/* * {
   box-sizing: border-box;
 }
 
 html {
   height: 100%;
-}
+} */
 
 .quiz-body {
     font-family: 'Nunito Sans', Arial, sans-serif;
     background-color: #A0A66F;
 }
 
-.body-container {
+.quiz-body-container {
     max-width: 960px;
     margin-right: auto;
     padding-left: 1rem;
 }
 
-nav {
+/* nav {
     background-color: #787C53;
     padding: 0.5rem;
     width: 100%;
@@ -40,7 +40,7 @@ nav a:hover {
 
 button {
     margin-right: .25rem;
-}
+} */
 
 .quiz-container {
   position: absolute;
