--- a/css/style.css
+++ b/css/style.css
@@ -109,4 +109,89 @@ button {
     padding-top: 2rem;
 }
 
+/* quiz page */
+
+.quiz-body {
+    font-family: 'Nunito Sans', Arial, sans-serif;
+    background-color: #A0A66F;
+}
+
+.quiz-body-container {
+    max-width: 960px;
+    margin-right: auto;
+    padding-left: 1rem;
+}
+
+.quiz-container {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    color: white;
+  }
+  
+  .quiz-button {
+    background-color: white; /* Green */
+    border: none;
+    color: black;
+    padding: 20px 35px;
+    text-align: center;
+    font-size: 18px;
+    font-weight: bold;
+  }
+  
+  .quiz-contain {
+    position: absolute;
+    top: 60%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+  }
+
+  /* quiz template page */
+
+  .quiz-body-container {
+    max-width: 960px;
+    margin-right: auto;
+    padding-left: 1rem;
+}
+
+  .quiz-container h2 {
+    position: absolute;
+    top: 45%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    color: white;
+    font-size: 40px;
+  }
+  
+  .quiz-button-choice {
+    background-color: white;
+    border: 1px solid rgba(27, 31, 35, 0.15);
+    border-radius: 6px;
+    box-shadow: rgba(27, 31, 35, 0.04) 0 1px 0, rgba(255, 255, 255, 0.25) 0 1px 0 inset;
+    box-sizing: border-box;
+    color: black;
+    cursor: pointer;
+    display: inline-block;
+    font-family: 'Nunito Sans', Arial, sans-serif;
+    font-weight: 500;
+    line-height: 20px;
+    padding: 18px 40px;
+    position: relative;
+  }
+  
+  .quiz-button-choice:hover {
+    background-color: #F3F4F6;
+    text-decoration: none;
+    transition-duration: 0.1s;
+  }
+  
+  .quiz-options {
+    position: absolute;
+    top: 60%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+  }
+  
+
   
