--- a/css/style.css
+++ b/css/style.css
@@ -80,7 +80,7 @@ button {
 .home-body #text-container {
     background-color: #F0F7F1;
     text-align: center;
-    padding-top: 10rem;
+    padding-top: 8rem;
 }
 
 .home-body #text-container h2 {
@@ -89,24 +89,34 @@ button {
 }
 
 .home-body #text-container :first-child {
-    padding-bottom: 3rem;
+    padding-bottom: 2rem;
     font-weight:bolder;
 }
 
 .home-body #text-container :nth-child(4) {
-    padding-bottom: 2.5rem;
+    padding-bottom: 1.5rem;
 }
 
 .home-body .btn-default{
     background-color: #595c3f;
     color:#FFF;
     border-color: #595c3f;
+    margin-top: 2rem;
 }
 
 /* about page */
 
 #about {
     padding-top: 2rem;
+}
+
+.contact-form {
+    margin-left: 3.5rem;
+    padding-top: 1rem;
+}
+
+.contact-form .form-item{
+    margin: 1rem;
 }
 
 /* quiz page */
