--- a/css/style.css
+++ b/css/style.css
@@ -63,6 +63,11 @@ button {
 
 /* home page */
 
+#plant {
+    max-width: 70px;
+    max-height: 70px;
+}
+
 .home-body {
     margin-top: 0;
     margin-bottom: .5rem;
