--- a/css/style.css
+++ b/css/style.css
@@ -339,4 +339,28 @@ th, td {
         right: 50px;
         font-size: 1rem;
     }
+
+    /* Plant Info Page */
+    .plant-info-heading {
+        margin-top: 1rem;
+        margin-left: 1rem;
+        padding: 3rem;
+    }
+    
+    .plant-img img {
+        width: 100%;
+        height: auto;
+        max-width: 700px;
+        max-height: 700px;
+        margin-left: 1rem;
+        margin-right: 1rem;
+        padding: 3rem;
+    }
+    
+    .care-info {
+        margin: 1rem;
+        padding: 3rem;
+    }
+    
+
 }
