--- a/css/style.css
+++ b/css/style.css
@@ -164,6 +164,12 @@ button {
     transform: translate(-50%,-50%);
   }
 
+  .quiz-contain a {
+    color: green;
+    background-color: transparent;
+    text-decoration: none;
+  }
+
   /* quiz template page */
 
   .quiz-question-container {
@@ -179,28 +185,6 @@ button {
     transform: translate(-50%,-50%);
     color: black;
     font-size: 40px;
-  }
-
-  .quiz-button-choice {
-    background-color: white;
-    border: 1px solid rgba(27, 31, 35, 0.15);
-    border-radius: 6px;
-    box-shadow: rgba(27, 31, 35, 0.04) 0 1px 0, rgba(255, 255, 255, 0.25) 0 1px 0 inset;
-    box-sizing: border-box;
-    color: black;
-    cursor: pointer;
-    display: inline-block;
-    font-family: 'Nunito Sans', Arial, sans-serif;
-    font-weight: 500;
-    line-height: 20px;
-    padding: 18px 40px;
-    position: relative;
-  }
-
-  .quiz-button-choice:hover {
-    background-color: #F3F4F6;
-    text-decoration: none;
-    transition-duration: 0.1s;
   }
 
   .quiz-options {
@@ -286,6 +270,7 @@ th, td {
 }
 
 /* Calendar Event */
+
 .card-container {
     float: left;
     width: 50%;
@@ -293,6 +278,10 @@ th, td {
     position: absolute;
     top: 23%;
     left: 25%;
+}
+
+.card {
+    background-color: #F0F7F1;
 }
 
 .card-title {
