Remove id selectors, add all group members to metadata, remove inline style, format all files

--- a/css/style.css
+++ b/css/style.css
@@ -70,9 +70,11 @@ button {
 
 /* home page */
 
-#plant {
-    max-width: 70px;
-    max-height: 70px;
+.plant {
+    max-width: 35px;
+    max-height: 35px;
+    margin-top: 6rem;
+    margin-bottom: 1rem;
 }
 
 .home-body {
@@ -83,34 +85,38 @@ button {
     color:#595c3f;
 }
 
-.home-body #backdrop-container {
+.nav .btn-light {
+    color:#595c3f
+}
+
+/* id selector */
+#backdrop-container {
     background-image: url('../img/bg-home.jpg');
     background-size: cover;
 }
 
-.home-body #text-container {
+.row :nth-child(2) {
     background-color: #F0F7F1;
     text-align: center;
-    padding-top: 5rem;
 }
 
-.home-body #text-container h2 {
-    margin-top: 2rem;
-    font-weight:lighter;
+.row :nth-child(2) h2 {
+    margin-top: 2.2rem;
+    font-weight: lighter;
 }
 
-.home-body #text-container :first-child {
-    padding-bottom: 2rem;
-    font-weight:bolder;
+.row :nth-child(2) .btn-default {
+    margin-top: 4.2rem;
 }
 
-.home-body #text-container :nth-child(5) {
-    padding-bottom: 1.5rem;
+header {
+    font-weight: bolder;
+    margin-bottom: 4rem;
 }
 
 /* about page */
 
-#about {
+.about-text {
     padding-top: 2rem;
 }
 
@@ -148,7 +154,7 @@ button {
   }
 
   .quiz-button {
-    background-color: white; /* Green */
+    background-color: white; 
     border: none;
     color: black;
     padding: 20px 35px;
@@ -165,10 +171,14 @@ button {
   }
 
   .quiz-contain a {
-    color: green;
+    color: #595c3f;
     background-color: transparent;
     text-decoration: none;
   }
+
+  .quiz-template-body .btn-light {
+      color: #595c3f;
+  } 
 
   /* quiz template page */
 
