--- a/Project-Draft1/css/style.css
+++ b/Project-Draft1/css/style.css
@@ -256,8 +256,8 @@ table {
     margin-right: auto;
     margin-left: auto;
     table-layout: fixed;
-    width: 60rem;
-    height: 45rem;
+    width: 40rem;
+    height: 20rem;
     border: 1px black solid;
     background-color: white;
 }
@@ -276,16 +276,22 @@ th, td {
     text-align: center;
     font-size: 2rem;
     border-radius: 50%;
-    position: fixed;
-    bottom: 15px;
-    right: 140px;
+    position: absolute;
+    bottom: -40px;
+    right: 120px;
 }
 
 .button-text {
-    position:fixed;
-    bottom: 10px;
-    right: 20px;
+    position: absolute;
+    bottom: -45px;
+    right: 5px;
 }
+
+
+th, td, .water-text, .soil, .fertilizer {
+    font-size: .8rem;
+}
+
 
 .water-text {
     background-color:  #A0A66F;
@@ -294,6 +300,8 @@ th, td {
 .soil, .fertilizer {
     background-color: #A98467;
 }
+
+
 
 /* Calendar Event */
 
@@ -319,9 +327,21 @@ th, td {
     background: white;
 }
 
+.form-title {
+    text-align: center;
+}
+
+.card-container .form-item {
+    padding-bottom: 10px;
+}
+
+.form-btn:hover {
+    background-color: #A9A9A9;
+}
+
 
 @media (min-width: 768px) {
-    id selector
+    /* id selector */
     #backdrop-container {
     background-image: url('../img/bg-home.jpg');
     background-size: cover;
@@ -355,20 +375,14 @@ th, td {
     }
 
     .new-event {
-        position: fixed;
-        top: 190px;
-        right: 170px;
-        font-size: 2rem;
-        border-radius: 50%;
-        height: 50px;
-        width: 50px;
+        bottom: -115px;
+        right: 130px;
     }
-
+    
     .button-text {
-        position: fixed;
-        top: 200px;
-        right: 50px;
-        font-size: 1rem;
+        position: absolute;
+        bottom: -120px;
+        right: 10px;
     }
 
     /* Plant Info Page */
