Fix home page button and footer styling

--- a/Project-Draft1/css/style.css
+++ b/Project-Draft1/css/style.css
@@ -71,8 +71,8 @@ button {
 /* home page */
 
 .plant {
-    max-width: 35px;
-    max-height: 35px;
+    max-width: 2rem;
+    max-height: 2rem;
     margin-top: 6rem;
     margin-bottom: 1rem;
 }
@@ -93,12 +93,6 @@ button {
     background-color: #F0F7F1;
 }
 
-/* id selector */
-/* #backdrop-container {
-    background-image: url('../img/bg-home.jpg');
-    background-size: cover;
-} */
-
 .row :nth-child(2) {
     text-align: center;
 }
@@ -107,7 +101,6 @@ button {
     margin-bottom: 4rem;
 }
 
-
 .row :nth-child(2) h2 {
     margin-top: 2.2rem;
     font-weight: lighter;
@@ -115,6 +108,14 @@ button {
 
 .row :nth-child(2) .btn-default {
     margin-top: 4.2rem;
+}
+
+.col .btn-light {
+    background-color:#595c3f;
+    color: #F0F7F1;
+    margin-top: 4rem;
+    font-size: 1.4rem;
+    font-weight: 200;
 }
 
 /* about page */
@@ -139,11 +140,9 @@ button {
 footer {
     color: white;
     background-color: #787C53;
-    padding-top: 0.75rem;
     padding-left: 1rem;
-    margin-top: 16rem;
+    display: block;
 }
-
 
 footer p {
     margin: 0;
