--- a/src/index.css
+++ b/src/index.css
@@ -411,7 +411,7 @@ th, td, .water-text, .soil, .fertilizer {
 @media (min-width: 768px) {
     /* id selector */
     #backdrop-container {
-    /* background-image: url('../img/bg-home.jpg'); */
+    background-image: url('../public/img/bg-image.jpg');
     background-size: cover;
 }
     .explore-heading {
