--- a/src/index.css
+++ b/src/index.css
@@ -72,16 +72,12 @@ button {
 .plant {
     max-width: 2rem;
     max-height: 2rem;
-    margin-top: 6rem;
+    margin-top: 15rem;
     margin-bottom: 1rem;
 }
 
 .home-body {
     margin-top: 0;
-}
-
-.home-body .container-fluid {
-    color:#595c3f;
 }
 
 #backdrop-container {
@@ -95,6 +91,11 @@ button {
 .container-fluid {
     background-color: #F0F7F1;
     height: 100vh;
+    color:#595c3f;
+}
+
+.container-fluid h1 {
+    color:#595c3f;
 }
 
 .row :nth-child(2) {
@@ -106,7 +107,7 @@ button {
 }
 
 .row :nth-child(2) h2 {
-    margin-top: 2.2rem;
+    margin-top: 3.2rem;
     font-weight: lighter;
 }
 
