--- a/src/index.css
+++ b/src/index.css
@@ -77,7 +77,7 @@ button {
 .plant {
     max-width: 2rem;
     max-height: 2rem;
-    margin-top: 15rem;
+    margin-top: 6rem;
     margin-bottom: 1rem;
 }
 
@@ -112,7 +112,7 @@ button {
 }
 
 .row :nth-child(2) h2 {
-    margin-top: 3.2rem;
+    margin-top: 2.6rem;
     font-weight: lighter;
 }
 
@@ -159,6 +159,7 @@ footer {
     background-color: #787C53;
     padding-left: 1rem;
     display: block;
+    width: 100%;
 }
 
 footer p {
