finish implementing filter on explore page

--- a/src/index.css
+++ b/src/index.css
@@ -294,6 +294,14 @@ cite {
     padding: 3rem;
 }
 
+/* #maintenanceSelect {
+    margin: 3rem;
+}
+
+#submitButton {
+    margin-left: auto;
+} */
+
 /* Calendar Page */
 
 .month-name {
